tests/neg/i11963a.scala
//> using options -Xfatal-warnings

open trait Foo // warn

// nopos-error: No warnings can be incurred under -Werror.
